welcome.lessons.welcome.methods.args.MethodsArgs.scala.error
Program:2: error: not found: type boolean
def move(nbPas: Int, verslAvant: boolean) {
                                 ^